fix color of collapse button on get it item [PT ##188828155]

--- a/src/applications/primo/www/components/search/fullView/getit/opac/locations/_location-items.scss
+++ b/src/applications/primo/www/components/search/fullView/getit/opac/locations/_location-items.scss
@@ -59,6 +59,7 @@ prm-location-items {
                 &:focus,
                 &:hover {
                     &:not([disabled]) {
+                        color: $white;
                         background-color: $accent-color;
                     }
                 }
